tests/typechecker/fail/300-relOps.hyg
assert(true >= 7);
assert(6 <= false);
assert(true > 6)